# File_Management_System

./: .gitignore  README.md  quick_start.sh  setup_third_party.sh  start_all.sh
backend/: CMakeLists.txt  build_backend.sh  database_api.cpp  database_api.hpp  main.cpp  oatpp_data_controller.hpp
frontend/: package-lock.json  package.json  start_frontend.sh  vite.config.js
frontend/src/router/: index.js
frontend/src/views/: AddFile.vue  DeleteFile.vue  Home.vue  QueryAll.vue  QueryByFileName.vue  QueryByUser.vue  UpdateFile.vue
